# PureNET-Vpn

./: pubspec.yaml
.cursor/plans/: vpn_app_ads_strategy_6efa8239.plan.md
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/harshRajpurohit/freeVpn/: MainActivity.java
android/gradle/wrapper/: gradle-wrapper.properties
android/vpnLib/: build.gradle
android/vpnLib/src/main/aidl/de/blinkt/openvpn/api/: ExternalCertificateProvider.aidl
android/vpnLib/src/main/aidl/de/blinkt/openvpn/core/: IStatusCallbacks.aidl
android/vpnLib/src/main/cpp/: CMakeLists.txt  ovpnexec.c
android/vpnLib/src/main/java/de/blinkt/openvpn/: VpnProfile.java
android/vpnLib/src/main/java/de/blinkt/openvpn/core/: NativeUtils.java  OpenVPNService.java  OpenVPNThread.java  VPNLaunchHelper.java
lib/: firebase_options.dart  main.dart
lib/apis/: ._apis.dart  apis.dart
lib/controllers/: home_controller.dart  native_ad_controller.dart
lib/helpers/: ad_helper.dart  ad_manager.dart  config.dart  my_dialogs.dart  pref.dart
lib/models/: vpn.dart
lib/screens/: home_screen.dart  location_screen.dart  network_test_screen.dart  splash_screen.dart
lib/services/: ads_helper.dart  intersatial_ads.dart  reward_ad_service.dart  theme_service.dart  vpn_engine.dart
lib/widgets/: connect_ad_dialog.dart  count_down_timer.dart  home_card.dart  network_card.dart  vpn_card.dart  watch_ad_dialog.dart
